# minishell

./: CMakeLists.txt  LICENSE  README
resources/: CMakeLists.txt
shell/: CMakeLists.txt  miniedge.cpp  miniedge.h  minimisc.cpp  minimisc.h  minishell.cpp  minishell.h  minitap.cpp  minitap.h
