FIND_PACKAGE(PkgConfig REQUIRED)

PKG_CHECK_MODULES(NEMOASST REQUIRED nemoasst)
INCLUDE_DIRECTORIES(${NEMOASST_INCLUDE_DIRS})
LINK_DIRECTORIES(${NEMOASST_LIBRARY_DIRS})

PKG_CHECK_MODULES(NEMOTALE REQUIRED nemotale)
INCLUDE_DIRECTORIES(${NEMOTALE_INCLUDE_DIRS})
LINK_DIRECTORIES(${NEMOTALE_LIBRARY_DIRS})

PKG_CHECK_MODULES(NEMOSHOW REQUIRED nemoshow)
INCLUDE_DIRECTORIES(${NEMOSHOW_INCLUDE_DIRS})
LINK_DIRECTORIES(${NEMOSHOW_LIBRARY_DIRS})

PKG_CHECK_MODULES(NEMOENVS REQUIRED nemoenvs)
INCLUDE_DIRECTORIES(${NEMOENVS_INCLUDE_DIRS})
LINK_DIRECTORIES(${NEMOENVS_LIBRARY_DIRS})

PKG_CHECK_MODULES(NEMOCOMPZ REQUIRED nemocompz)
INCLUDE_DIRECTORIES(${NEMOCOMPZ_INCLUDE_DIRS})
LINK_DIRECTORIES(${NEMOCOMPZ_LIBRARY_DIRS})

PKG_CHECK_MODULES(NEMOSHELL REQUIRED nemoshell)
INCLUDE_DIRECTORIES(${NEMOSHELL_INCLUDE_DIRS})
LINK_DIRECTORIES(${NEMOSHELL_LIBRARY_DIRS})

PKG_CHECK_MODULES(NEMOXWAYLAND REQUIRED nemoxwayland)
INCLUDE_DIRECTORIES(${NEMOXWAYLAND_INCLUDE_DIRS})
LINK_DIRECTORIES(${NEMOXWAYLAND_LIBRARY_DIRS})

PKG_CHECK_MODULES(SKIA REQUIRED skia)
INCLUDE_DIRECTORIES(${SKIA_INCLUDE_DIRS})
LINK_DIRECTORIES(${SKIA_LIBRARY_DIRS})

PKG_CHECK_MODULES(LIBCGROUP REQUIRED libcgroup)
INCLUDE_DIRECTORIES(${LIBCGROUP_INCLUDE_DIRS})
LINK_DIRECTORIES(${LIBCGROUP_LIBRARY_DIRS})

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_C_FLAGS} -std=c++11")
set(CMAKE_LINK_FLAGS "${CMAKE_LINK_FLAGS}")

add_definitions(-DMINISHELL_RESOURCES="${CMAKE_INSTALL_PREFIX}/share/minishell")

add_executable(minishell
	minishell.cpp
	minitap.cpp
	miniedge.cpp
	minimisc.cpp
	)

TARGET_LINK_LIBRARIES(minishell
	${NEMOASST_LIBRARIES}
	${NEMOTALE_LIBRARIES}
	${NEMOSHOW_LIBRARIES}
	${NEMOENVS_LIBRARIES}
	${NEMOCOMPZ_LIBRARIES}
	${NEMOSHELL_LIBRARIES}
	${NEMOXWAYLAND_LIBRARIES}
	${NEMOUX_COMMON_LIBRARIES}
	${SKIA_LIBRARIES}
	${LIBCGROUP_LIBRARIES}
	)

INSTALL(TARGETS minishell DESTINATION bin)
